--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <version>1.1.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version>
+        </dependency>
     </dependencies>
 
     <build>
